<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:id="@+id/tvLogin"
        android:fontFamily="@font/robotoregular"
        android:textColor="@color/app_theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number_to_login"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tvEnterMobile"
        android:fontFamily="@font/robotomedium"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCode"
        android:text="@string/_91"
        app:layout_constraintTop_toBottomOf="@id/tvEnterMobile"
        app:layout_constraintStart_toStartOf="@id/tvEnterMobile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/etMobile"
        app:layout_constraintBottom_toBottomOf="@id/etMobile" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@null"
        android:id="@+id/etMobile"
        app:layout_constraintStart_toEndOf="@id/tvCode"
        app:layout_constraintEnd_toEndOf="@id/tvEnterMobile"
        tools:text="9767857572"
        android:textSize="18sp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:maxLength="10"
        android:theme="@style/custom_theme"
        style="@style/custom_theme"
        android:layout_marginTop="75dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/robotomedium"
        app:layout_constraintTop_toBottomOf="@id/tvEnterMobile"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/etMobile"
        app:layout_constraintStart_toStartOf="@id/tvEnterMobile"
        app:layout_constraintEnd_toEndOf="@id/etMobile"
        android:background="@color/black"
        android:layout_marginTop="3dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnNext"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="45dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="30dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:gravity="center"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>