<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true">
    <org.eazegraph.lib.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="195dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="195dp"
        android:padding="6dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="@id/piechart"
        app:layout_constraintTop_toTopOf="@id/piechart"
        app:layout_constraintStart_toEndOf="@id/piechart"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ll1"
                android:orientation="horizontal"
                android:background="@color/c1"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv1"
                android:text="@string/_40"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            >
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ll2"
                android:orientation="horizontal"
                android:background="@color/c2"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv2"
                android:text="@string/_30"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            >
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ll3"
                android:orientation="horizontal"
                android:background="@color/c3"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv3"
                android:text="@string/_20"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            >
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ll4"
                android:orientation="horizontal"
                android:background="@color/c4"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv4"
                android:text="@string/_10"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>