<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        android:id="@+id/tvLogin"
        android:fontFamily="@font/robotoregular"
        android:textColor="@color/app_theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp_sent_on"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tvEnterMobile"
        android:fontFamily="@font/robotomedium"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/llOTP"
        android:gravity="center"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterMobile"
        android:orientation="horizontal"
        android:padding="8dp"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:id="@+id/et1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:id="@+id/ed1"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:id="@+id/et2"
            android:layout_marginStart="4dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:id="@+id/ed2"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:id="@+id/et3"
            android:layout_marginStart="4dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:id="@+id/ed3"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginStart="4dp"
            android:id="@+id/et4"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:maxLength="1"
                android:id="@+id/ed4"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginStart="4dp"
            android:id="@+id/et5"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:id="@+id/ed5"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="65dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:id="@+id/et6"
            android:layout_marginStart="4dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="phone"
                android:theme="@style/custom_theme"
                style="@style/custom_theme"
                android:maxLength="1"
                android:id="@+id/ed6"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnVerifyOtp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="45dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="30dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/verify_otp"
                android:gravity="center"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:id="@+id/btnBack"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>